# Quipu-Log

./: CHANGELOG.md  Cargo.toml  README.ko.md  README.md  RELEASING.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
crates/quipu-client/: Cargo.toml  README.ko.md  README.md
crates/quipu-client/src/: client.rs  event.rs  lib.rs  retry.rs  spool.rs  transport.rs
crates/quipu-client/tests/: retransmit.rs
crates/quipu-core/: Cargo.toml  README.ko.md  README.md
crates/quipu-core/src/: access.rs  checkpoint.rs  crypto.rs  error.rs  id.rs  lib.rs  merkle.rs  merkle_log.rs  model.rs  query.rs  registry.rs  retention.rs  schema.rs  store.rs  time.rs
crates/quipu-core/src/storage/: mod.rs  segment.rs  table.rs
crates/quipu-core/tests/: access.rs  checkpoints.rs  integration.rs  pagination.rs  proofs.rs  retention.rs  rotation.rs  scale.rs
crates/quipu-mcp/: Cargo.toml  README.ko.md  README.md
crates/quipu-mcp/src/: backend.rs  http.rs  issuer.rs  lib.rs  main.rs  server.rs  tools.rs
crates/quipu-mcp/tests/: http_backend.rs  protocol.rs
crates/quipu-middleware/: Cargo.toml  README.ko.md  README.md
crates/quipu-middleware/benches/: shard_scaling.rs  write_path.rs
crates/quipu-middleware/src/: event.rs  filter.rs  health.rs  layer.rs  lib.rs  metrics.rs  permissions.rs  pipeline.rs
crates/quipu-middleware/src/sharding/: anchor.rs  fanout.rs  mod.rs  shard_map.rs
crates/quipu-middleware/tests/: access.rs  layer.rs  observability.rs  pipeline.rs  sharding.rs
crates/quipu-server/: Cargo.toml  README.ko.md  README.md  openapi.json
crates/quipu-server/src/: api.rs  config.rs  lib.rs  main.rs  serve.rs  sink.rs
crates/quipu-server/tests/: http.rs  observability.rs  sharding_http.rs  tls.rs
docs/specs/horizontal-scaling/: solution-design.md
examples/axum-demo/: Cargo.toml
examples/axum-demo/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dlq_redrive.rs  segment_reader.rs
