[workspace]
resolver = "2"
members = [
    "crates/quipu-core",
    "crates/quipu-middleware",
    "crates/quipu-server",
    "crates/quipu-client",
    "crates/quipu-mcp",
    "examples/axum-demo",
]
# fuzzing lives in its own workspace: it needs nightly + libfuzzer and must
# not drag those requirements into `cargo build/test --workspace`
exclude = ["fuzz"]

[workspace.package]
version = "0.2.0"
edition = "2021"
# MSRV floor: the store guards its root with `std::fs::File::try_lock` and
# matches on `std::fs::TryLockError`, both stabilized in Rust 1.89. Raising this
# is a breaking change for downstreams — see CHANGELOG.md's compatibility policy.
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/draft-dhgo/Quipu-Log"
homepage = "https://github.com/draft-dhgo/Quipu-Log"
keywords = ["audit", "audit-log", "tamper-evident", "compliance", "logging"]
categories = ["database-implementations", "cryptography", "web-programming"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
base64 = "0.22"
crc32fast = "1"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = "thin"
