[package]
name = "quipu-core"
description = "Embedded, OS-independent audit log storage engine: typed entity registries, field encryption, retention, and time-travel queries."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
crc32fast = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
aes-gcm = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
