[package]
name = "quipu-middleware"
description = "Async audit-logging middleware: event pipeline with DLQ and fallback, programmable pre/post filters, permissions, and a tower proxy layer."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quipu-core = { path = "../quipu-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
axum = { workspace = true }
