[package]
name = "quipu-middleware"
description = "Async audit-logging middleware: event pipeline with DLQ and fallback, programmable pre/post filters, permissions, and a tower proxy layer."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
# version alongside path so `cargo publish` resolves it from crates.io
quipu-core = { path = "../quipu-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
axum = { workspace = true }
