[package]
name = "quipu-server"
description = "Standalone audit-log daemon over quipu-core: central append/query HTTP API for polyglot, multi-service deployments."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
quipu-core = { path = "../quipu-core", version = "0.1.0" }
quipu-middleware = { path = "../quipu-middleware", version = "0.1.0" }
axum = { workspace = true }
axum-server = { workspace = true }
tokio = { workspace = true, features = ["net", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"
tokio-rustls = "0.26"
tower = { workspace = true }
http-body-util = { workspace = true }
