[package]
name = "axum-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
quipu-core = { path = "../../crates/quipu-core" }
quipu-middleware = { path = "../../crates/quipu-middleware" }
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
